--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "gatsby-plugin-google-fonts": "^0.0.3",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.17",
-    "gatsby-plugin-sharp": "^1.6.30",
-    "gatsby-transformer-sharp": "^1.6.19",
-    "mailgun.js": "^2.0.1",
+    "gh-pages": "^1.1.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^3.1.4",
     "react-simple-icons": "^1.0.0-beta.5"
@@ -34,7 +32,7 @@
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "postinstall": "gatsby build"
+    "deploy": "gh-pages -d public -b master"
   },
   "devDependencies": {
     "prettier": "^1.10.2"
